# sparc

./: .bundler-audit.yml  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .trivyignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ubi9  Dockerfile_debian  Gemfile  LICENSE  NOTICE  PLAN_51_bootstrap_migration.md  PLAN_52_oscal_metadata.md  README.md  READMEME_28.md  build.md  docker-compose-prod.yaml  docker-compose.dburl.yaml  docker-compose.piv-nondod.yaml  docker-compose.piv.yaml  docker-compose.ubi9.yaml  docker-compose.yaml  dump.rdb
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  oscal-metadata.json  required-checks.json
.security/: sca-allowlist.yaml
LICENSES/: BSD-3-Clause-Cambridge-WITH-exception.txt  Brakeman-Public-Use-License.txt  MITRE-HDF-LIBS-LICENSE  README.md
certs/: .gitignore  README.md
config/: application.rb  brakeman.ignore  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  puma.rb  recurring.yml  routes.rb  storage.yml
db/: schema.rb  seeds.rb
docs/: ADMIN_CREDENTIAL_ROTATION.md  API.md  AUTHENTICATION.md  DATABASE_TLS.md  DOCKER.md  Developer_Collision_Avoidance_Plan.md  ENVIRONMENT_VARIABLES.md  Implemenation_plan.md  MAP.md  OBJECT_STORAGE.md  OKTA_DEV_SETUP.md  PIV_IDENTITY_MAPPING.md  PRODUCTION_SECURITY.md  SPARC_GitHub_Issues_Report.docx  SPARC_HASH_ROTATION.md  TECH_STACK.md  architecture.md  build.md  catalog-schema.md  development-https.md  framework_mapping_plan.md  issue_58_implementation_plan.md  oscal-data-mapping.md  puma-dev.md  quick_start.md  release_notes.md  sample-consent-banner.html  sar-columns.md  security-scanning.md  ssp-columns.md  ssp-schema.md  tpr-columns.md  troubleshooting.md
lib/: aws_labs_cdef_bootstrap.rb  seed_runner.rb  xml_security.rb
samples/: README.md
scripts/: create_nist_labels.sh  trivy-scan.sh
spec/: rails_helper.rb  spec_helper.rb
tests/: regression_plan.md
tests/api/: .env.example  .gitignore  Dockerfile  README.md  _bulk_destroy.py  _document_helpers.py  _populate_from_profile.py  _review_workflow.py  conftest.py  pyproject.toml  sparc-api  test_admin_credentials.py  test_artifacts.py  test_attestations.py  test_authoritative_sources.py  test_authorization_boundaries.py  test_back_matter_resources.py  test_baseline_parameters.py  test_cdef_documents.py  test_control_catalogs.py  test_control_mappings.py  test_discovery.py  test_edge_cases.py  test_evidences.py  test_federation_peers.py  test_ksi_catalog.py  test_ksi_validations.py  test_poam_documents.py  test_profile_documents.py  test_sap_documents.py  test_sar_documents.py  test_sessions.py  test_ssp_documents.py  test_translations.py  test_users.py
tests/api/fixtures/: sample.hdf-amendments.json  sample.hdf.json  sample.oscal-poam.json
tests/api/schemas/: __init__.py  _back_matter.py  _catalog_mapping.py  _documents.py  _federation.py  _helpers.py  _profile.py  base.py  cdef.py
tests/ui-smoke/: .env.example  .gitignore  README.md  _api_setup.py  _contrast_probe.py  a11y.py  a11y_baseline.json  conftest.py  helpers.py  pages.py  pyproject.toml  test_accessibility.py  test_admin_create_user.py  test_authenticated_nav.py  test_authoritative_sources.py  test_boundary_org_bugs_770.py  test_bulk_delete.py  test_config_inference.py  test_csp_reporting.py  test_evidence_boundary_scoping.py  test_fido2_virtual_authenticator.py  test_index_search.py  test_keyboard_activation.py  test_login_page.py  test_no_inline_handlers.py  test_oscal_metadata_edit.py  test_piv_mtls.py  test_populate_flow.py  test_publish_gate.py  test_review_queue.py  test_session_expiry.py  test_show_page_csp.py  test_tls_verification.py  test_turbo_nav_csp.py
wiki/: API-Reference.md  Architecture.md  Authentication-and-MFA.md  Changelog.md  Configuration.md  Contributing.md  Core-Functions.md  Data-Isolation.md  FAQ.md  Framework-Mapping.md  Getting-Started.md  Glossary.md  Home.md  Integrations.md  PUSH_TO_WIKI.sh  RBAC.md  Screens.md  User-Guide-Administration.md  User-Guide-Assessment-Plans.md  User-Guide-Assessment-Results.md  User-Guide-Authorization-Boundaries.md  User-Guide-Component-Definitions.md  User-Guide-Control-Catalogs-and-Baselines.md  User-Guide-Converters-and-Imports.md  User-Guide-Evidence-and-Attestations.md  (+7 more)
(+1295 files in other folders)
